docs/apache-airflow-providers-google/8.7.0/_sources/_api/tests/system/providers/google/cloud/transfers/example_gdrive_to_local/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.transfers.example_gdrive_to_local`
===============================================================================

.. py:module:: tests.system.providers.google.cloud.transfers.example_gdrive_to_local

.. autoapi-nested-parse::

   Example DAG using GoogleDriveToLocalOperator.

   Using this operator requires the following additional scopes:
   https://www.googleapis.com/auth/drive



Module Contents
---------------

.. py:data:: ENV_ID
   

   

.. py:data:: PROJECT_ID
   

   

.. py:data:: FILE_NAME
   :annotation: = empty.txt

   

.. py:data:: OUTPUT_FILE
   :annotation: = out_file.txt

   

.. py:data:: DAG_ID
   :annotation: = example_gdrive_to_local

   

.. py:data:: BUCKET_NAME
   

   

.. py:data:: LOCAL_PATH
   

   

.. py:data:: create_bucket
   

   

.. py:data:: test_run
   

   

