docs/apache-airflow-providers-google/10.12.0/_sources/_api/tests/system/providers/google/cloud/transfers/example_gdrive_to_local/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.transfers.example_gdrive_to_local`
===============================================================================

.. py:module:: tests.system.providers.google.cloud.transfers.example_gdrive_to_local

.. autoapi-nested-parse::

   Example DAG using GoogleDriveToLocalOperator.

   Using this operator requires the following additional scopes:
   https://www.googleapis.com/auth/drive



Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.create_temp_gcp_connection



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.ENV_ID
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.PROJECT_ID
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.DAG_ID
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.CONNECTION_ID
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.FILE_NAME
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.DRIVE_FILE_NAME
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.OUTPUT_FILE
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.BUCKET_NAME
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.LOCAL_PATH
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.log
   tests.system.providers.google.cloud.transfers.example_gdrive_to_local.test_run


.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'example_gdrive_to_local'

   

.. py:data:: CONNECTION_ID

   

.. py:data:: FILE_NAME
   :value: 'empty.txt'

   

.. py:data:: DRIVE_FILE_NAME

   

.. py:data:: OUTPUT_FILE
   :value: 'out_file.txt'

   

.. py:data:: BUCKET_NAME

   

.. py:data:: LOCAL_PATH

   

.. py:data:: log

   

.. py:function:: create_temp_gcp_connection()


.. py:data:: test_run

   

